<resources>
    <string name="facebook_app_id">1467439823294276</string>
    <string name="app_name">DataChess</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetircontraseña">Repetir Contraseña</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelarr">Cancelar</string>
    <string name="cancelar">Cancelar</string>
    <string name="username">Nombre de Usuario</string>
    <string name="prueba">Prueba git</string>
    <string name="registro">Registro</string>
    <string name="title_activity_main_d">MainActivityD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="relleno">REGLAMENTO\n
        \n
        Patrocina: Liga de Ajedrez de Antioquia - Jorge Aristizábal.\n
        Organiza: Liga de Ajedrez de Antioquia.\n
        Lugar: Parque del Ajedrez Unidad Deportiva Atanasio Girardot.\n
        Fecha Inicio: jueves 18 de mayo 2017.\n
        Inscripciones: Hasta el día 18 de mayo 6:00pm, para ser programados en la primera ronda.\n
        Sistema de juego: Suizo a 13 rondas.\n
        Sistema de pareos: Swiss Manager el Cual no será Objeto de Reclamo Salvo una mala Digitación que se debe reportar antes de la ronda siguiente para que tenga validez.\n
        Tiempo de Juego: 3 minutos más 2 segundos de incremento por jugada.\n
        Desempates: 1 Buchholz.\n
        2 Progresivo.\n
        3 Sonneborn Berger.\n
        W.O: El tiempo de su reloj. Jugador que pierda por W y no avise será retirado del torneo.\n
        Costo:  25.000 pesos Todos Pagan.\n
        Cronograma: Inicio jueves 18 de mayo 6:30pm.\n
        \n
        PREMIACIÓN.
        \n
        General.\n
        1. 50  porciento de la Inscripción para el continental + 100.000 \n
        2. 50  porciento de la  Inscripción para el continental\n
        \n
        Elo menor a 2000.\n
        1. 120.000 pesos \n
        2. 80.000 pesos\n
        \n
        Elo menor a 1800.\n
        1. 120.000 pesos \n
        2. 80.000 pesos\n
        \n
        Mejor Sub 14.\n
         80.000 pesos.</string>

    <string name="title_activity_tabla_d">TablaActivityD</string>
    <string name="tabla">Tabla</string>
    <!--Array con los valores de la cabecera de la tabla-->
    <string-array name="cabecera_tabla">
        <item>Id de la fila</item>
        <item>Nombre</item>
        <item>Club</item>
        <item>R1</item>
        <item>R2</item>
        <item>R3</item>
        <item>R4</item>
        <item>R5</item>
        <item>Total</item>
    </string-array>
    <string name="title_activity_list_d">ListActivityD</string>
    <string-array name="cabecera_tabla_list">
        <item>Jugador Id</item>
        <item>Nombre Jugador</item>
        <item>Club</item>
        <item>Elo</item>
    </string-array>
    <string name="title_game_list_d">GameActivityD</string>
    <string-array name="cabecera_game_list">
        <item>Blancas</item>
        <item>Negras</item>
        <item>Mesa</item>
    </string-array>
    <string name="title_activity_game_d">GameActivityD</string>
    <string name="title_activity_juez_d">JuezActivityD</string>
    <string name="Mesa">MESA</string>
    <string name="Blancas">BLANCAS</string>
    <string name="Negras">NEGRAS</string>
    <string name="Mesa1">Mesa 1</string>
    <string name="Resultado">Resultado</string>
    <string name="Mesa2">Mesa 2</string>
    <string name="Mesa3">Mesa 3</string>
    <string name="Mesa4">Mesa 4</string>
    <string name="Mesa5">Mesa 5</string>
    <string name="Mesa6">Mesa 6</string>
    <string name="Actualizar">ACTUALIZAR</string>
    <string-array name="mesas_array">
        <item>mesa_1</item>
        <item>mesa_2</item>
        <item>mesa_3</item>
        <item>mesa_4</item>
        <item>mesa_5</item>
        <item>mesa_6</item>
    </string-array>


</resources>
